# visiblair-homeassistant

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  hacs.json  info.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  validate.yml
custom_components/visiblair/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  icons.json  manifest.json  quality_scale.yaml  sensor.py  strings.json
custom_components/visiblair/brand/: README.md
custom_components/visiblair/translations/: en.json
docs/: architecture.md
tests/: conftest.py  test_api.py  test_api_http.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_entities.py  test_freshness.py  test_init.py  test_sensor.py
tests/fixtures/: sensor_response.json
