# Tool configuration only — the integration itself is loaded by Home
# Assistant from custom_components/visiblair/, not pip-installed. There
# is intentionally no [project] section here.

[tool.ruff]
line-length = 88
# Must match the OLDEST supported interpreter (hacs.json floor HA 2025.1.0
# ran Python 3.12), NOT the newest: with py314 here, ruff format actively
# rewrites `except (A, B):` to 3.14-only unparenthesized PEP 758 syntax —
# the exact regression that shipped in 0.6.2.
target-version = "py312"
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line-too-long — defer to ruff format
    "SIM108", # ternary-instead-of-if — clarity sometimes beats brevity
    "RUF001", # ambiguous-unicode-character-string — em/en dashes in prose
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # pytest uses assert intentionally

[tool.mypy]
# 3.14, NOT the 3.12 floor: mypy parses the installed (current) Home
# Assistant source, which itself uses 3.14-only syntax. The 3.12 floor for
# OUR code is enforced by ruff target-version and CI's compileall job.
python_version = "3.14"
strict = true
warn_unreachable = true
# Modern HA's stubs aren't published; rely on its installed source. The
# overrides below suppress missing-imports for runtime-only packages.

[[tool.mypy.overrides]]
module = [
    "homeassistant.*",
    "voluptuous",
    "pytest",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
